Fix overflow issues on home and about pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 #about>div {
 	padding: 1rem;
 }
+
+#home {
+	overflow-x: hidden;
+}
