--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -16,8 +16,10 @@ position: relative;
 .absolute {
 	position: absolute;
 	top: 0;
-	width: 100%;
-	margin-right: 1rem;
+	left: 0;
+	right: 0;
+	padding: 0.8rem;
+	/* width: 100%; */
 }
 
 .spacer {
